<resources>
    <string name="app_name">Swabbr</string>
    <string name="screen_vlog_details_title">Vlog Details</string>
    <string name="screen_vlog_list_title">Vlog List</string>
    <string name="screen_user_details_title">User Details</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>

    <string name="nickname_hint">Nickname</string>

    <string name="user_name">Name: %1$s</string>
    <string name="user_username">Username: @%1$s</string>
    <string name="user_email">Email: %1$s</string>
    <string name="user_phone">Phone: %1$s</string>
    <string name="user_address">%1$s, %2$s, %3$s</string>
    <string name="user_website">Website: %1$s</string>
    <string name="user_company">Company: %1$s</string>

    <string name="nickname">\@%1$s</string>
    <string name="full_name">%1$s %2$s</string>

    <string name="app_label">Swabbr</string>
    <string name="search_hint">Search for profiles</string>

    <string name="logo">Logo</string>
    <string name="live">Live</string>
    <string name="user_avatar">User avatar</string>
    <string name="search">Search</string>
    <string name="myProfile">My Profile</string>
    <string name="userProfile">User Profile</string>
    <string name="vlogs">Vlogs</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>

    <string name="my_profile_no_vlogs">You have not published any vlogs yet.</string>
    <string name="user_no_vlogs_refresh">This user has not published any vlogs yet.\nPull down to refresh.</string>
    <string name="search_no_results">Unable to find users matching "%1$s".</string>

    <string name="followStatusError">…</string>
    <string name="requested">Requested</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>

    <string name="button_dismiss">Dismiss</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="torch">Torch</string>

    <string name="zero_time">00:00</string>

    <string name="status_connecting">Connecting</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnecting">Disconnecting</string>
    <string name="status_error">An error occurred.</string>
    <string name="status_unknown">Unexpected error occurred.</string>

    <string name="no_devices_available">Could not detect or gain access to any cameras on this device</string>

    <string name="manual">Manual</string>
    <string name="acceptall">Accept all</string>
    <string name="denyall">Deny all</string>

    <string name="profileIsPrivate">Profile is private</string>
    <string name="dailyVlogRequestLimit">Daily vlog request limit</string>
    <string name="followMode">Follow mode</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rememberMe">Remember me</string>
    <string name="login">Login</string>
    <string name="signin">Signin</string>
    <string name="register">Register</string>
    <string name="forgot">Forgot password?</string>
    <string name="usernameEmail">Email</string>

    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="phoneNumber">Phone number</string>
    <string name="emailAddress">Email address</string>
    <string name="confirmPassword">Confirm password</string>

    <string name="love_it">Love it!</string>
    <string name="react">React</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>

    <string name="birthDatePicker">%1$s/%2$s/%3$s</string>

    <string name="google_play_unsupported_device">This device is not supported by Google Play Services.</string>
    <string name="vlog_count">%1$d vlogs</string>
    <string name="view_count">%1$d</string>
    <string name="like_count">%1$d</string>
    <string name="reaction_count">%1$d</string>
    <string name="duration">%1$02d:%2$02d:%3$02d</string>
    <string name="date">%1$02d/%2$02d/%3$d</string>
    <string name="vlogTransition">vlogtransition</string>

</resources>
