<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Switch
        android:id="@+id/privateSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/profileIsPrivate" />

    <TextView
        android:id="@+id/dailyVlogRequestLimitLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dailyVlogRequestLimit" />

    <Spinner
        android:id="@+id/dailyVlogRequestLimitSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false" />

    <TextView
        android:id="@+id/followmodeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/followMode" />

    <Spinner
        android:id="@+id/followmodeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false" />

    <Button
        android:id="@+id/saveSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/save" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

</LinearLayout>
