<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@mipmap/ic_logo" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/ic_person_24dp"
        android:drawablePadding="5dp"
        android:drawableTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/usernameEmail"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_lock_24dp"
        android:drawablePadding="5dp"
        android:drawableTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@color/material_on_primary_emphasis_high_type"
        android:enabled="false"
        android:text="@string/signin" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_on_primary_emphasis_medium"
        android:text="@string/register"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/forgot"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:visibility="gone"/>

</LinearLayout>
