<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">

        <!--        <TextView-->
        <!--            android:id="@+id/firstNameLabel"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/firstName" />-->

        <!--        <EditText-->
        <!--            android:id="@+id/firstNameInput"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:ems="10"-->
        <!--            android:inputType="textPersonName|textCapWords"-->
        <!--            android:text="" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/lastNameLabel"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/lastName" />-->

        <!--        <EditText-->
        <!--            android:id="@+id/lastNameInput"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:ems="10"-->
        <!--            android:inputType="textPersonName|textCapWords"-->
        <!--            android:text="" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/genderLabel"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/gender" />-->

        <!--        <Spinner-->
        <!--            android:id="@+id/genderSpinner"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/countryLabel"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/country" />-->

        <!--        <Spinner-->
        <!--            android:id="@+id/countrySpinner"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/birthDateLabel"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/dateofbirth" />-->

        <!--        <Button-->
        <!--            android:id="@+id/datePicker"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/phoneNumberLabel"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/phoneNumber" />-->


        <!--        <EditText-->
        <!--            android:id="@+id/phoneNumberInput"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:ems="10"-->
        <!--            android:inputType="phone" />-->

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatarPicker"
                android:transitionName="circleImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:src="@mipmap/ic_avatar_placeholder" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_photo"
                style="@style/FabStyle"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <EditText
            android:id="@+id/nicknameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:drawableStart="@drawable/ic_person_24dp"
            android:drawablePadding="5dp"
            android:drawableTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/nickname_hint"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/emailInput"
            android:transitionName="emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="5dp"
            android:drawableTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/usernameEmail"
            android:inputType="textEmailAddress"
            android:text="" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock_24dp"
            android:drawablePadding="5dp"
            android:drawableTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirmPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:paddingStart="@dimen/small_icon_size" />

        <Switch
            android:id="@+id/rememberMeSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rememberMe" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/register" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>
