<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:wowza="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <FrameLayout
        android:id="@+id/cameraView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0d0d0d">

        <com.wowza.gocoder.sdk.api.devices.WOWZCameraView
            android:id="@+id/camera_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            wowza:defaultCamera="front"
            wowza:frameSizePreset="frameSize1280x720"
            wowza:scaleMode="fill" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:layout_gravity="end|center_vertical"
        android:background="#32000000"
        android:padding="15dp"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:paddingRight="10dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAlignment="center"
            android:textSize="250sp"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:indeterminate="false"
            android:max="800"
            android:minHeight="50dp"
            android:progress="0"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="false"
            android:orientation="horizontal">

            <com.laixer.swabbr.presentation.recordvlog.MultiStateButton
                android:id="@+id/toggle_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#000000ff"
                android:contentDescription="@string/switch_camera"
                android:cropToPadding="false"
                android:padding="10dp"
                android:src="@drawable/ic_switch_camera" />

            <com.laixer.swabbr.presentation.recordvlog.MultiStateButton
                android:id="@+id/toggle_torch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#000000ff"
                android:contentDescription="@string/torch"
                android:padding="10dp"
                android:src="@drawable/ic_torch_off"
                custom:offSrc="@drawable/ic_torch_on" />

        </LinearLayout>

        <com.laixer.swabbr.presentation.recordvlog.MultiStateButton
            android:id="@+id/toggle_broadcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#000000ff"
            android:cropToPadding="false"
            android:maxWidth="@dimen/medium_icon_size"
            android:maxHeight="@dimen/medium_icon_size"
            android:src="@drawable/ic_stop"
            custom:offSrc="@drawable/ic_start" />

        <com.laixer.swabbr.presentation.recordvlog.TimerView
            android:id="@+id/timer_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_corner"
            android:text="@string/zero_time"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:typeface="monospace"
            android:visibility="gone" />

    </RelativeLayout>
</RelativeLayout>